kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiz-app
  template:
    metadata:
      labels:
        app: wiz-app
    spec:
      containers:
      - name: wiz-app
        image: <your-dockerhub-username>/wiz-app:latest
        ports:
        - containerPort: 8080
