kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiz-app-svc
spec:
  type: LoadBalancer
  selector:
    app: wiz-app
  ports:
  - port: 80
    targetPort: 8080
